--- a/app/app/ClientApp/src/app/block/block.component.html
+++ b/app/app/ClientApp/src/app/block/block.component.html
@@ -4,22 +4,31 @@
       <div style="display: block;">
 
         <div *ngIf="isDataAvailable && showChart">
+          <google-chart #chart
+                        [title]="title"
+                        [type]="type"
+                        [data]="lineChartData"
+                        [columnNames]="columnNamess"
+                        [options]="options"
+                        [width]="width"
+                        [height]="height">
+          </google-chart>
           <!--<ngx-charts-line-chart
-              [view]="view"
-              [scheme]="colorScheme"
-              [legend]="legend"
-              [showXAxisLabel]="showXAxisLabel"
-              [showYAxisLabel]="showYAxisLabel"
-              [xAxis]="xAxis"
-              [yAxis]="yAxis"
-              [xAxisLabel]="xAxisLabel"
-              [yAxisLabel]="yAxisLabel"
-              [timeline]="timeline"
-              [results]="lineChartData"
-              (select)="onSelect($event)"
-              (activate)="onActivate($event)"
-              >
-            </ngx-charts-line-chart>-->
+      [view]="view"
+      [scheme]="colorScheme"
+      [legend]="legend"
+      [showXAxisLabel]="showXAxisLabel"
+      [showYAxisLabel]="showYAxisLabel"
+      [xAxis]="xAxis"
+      [yAxis]="yAxis"
+      [xAxisLabel]="xAxisLabel"
+      [yAxisLabel]="yAxisLabel"
+      [timeline]="timeline"
+      [results]="lineChartData"
+      (select)="onSelect($event)"
+      (activate)="onActivate($event)"
+      >
+    </ngx-charts-line-chart>-->
         </div>
 
         <div *ngIf="isIntradayAvailable && showIntraday">
