got news and itneractions workinug

--- a/app/app/ClientApp/src/app/block/block.component.html
+++ b/app/app/ClientApp/src/app/block/block.component.html
@@ -7,7 +7,7 @@
           <google-chart #chart
             [title]="title"
             [type]="type"
-            [data]="lineChartData"
+            [data]="historicalData"
             [columnNames]="columnNamess"
             [options]="options"
             [width]="width"
