--- a/app/app/ClientApp/src/app/layout/layout.component.html
+++ b/app/app/ClientApp/src/app/layout/layout.component.html
@@ -1,5 +1,5 @@
 <div style="position:absolute; top:0; bottom:0; left:0; right: 0; display: flex; flex-direction: column;" >
-  <mat-sidenav-container class="example-container" >
+  <mat-sidenav-container class="example-container">
 
     <!-- Left Side -->
     <mat-sidenav #sidenav [mode]="mode.value" class="sidenav">
@@ -8,8 +8,8 @@
         <div class="search"><app-search></app-search></div>
         <div class="store">
           <div>Your Selected Stocks</div>
-          <ul  *ngFor="let s of this.stocks trackBy: trackStocks">
-            <li >{{s.ticker}} <button id={{s.ticker}} mat-button mat-raised-button color="primary" (click)="deleteStock($event)">Delete</button> </li> 
+          <ul *ngFor="let s of this.stocks trackBy: trackStocks">
+            <li>{{s.ticker}} <button id={{s.ticker}} mat-button mat-raised-button color="primary" (click)="deleteStock($event)">Delete</button> </li>
           </ul>
         </div>
       </div>
@@ -20,13 +20,29 @@
     <mat-sidenav-content>
       <div class="topnav">
 
-        <a href="#home" class="active"> <i class="fa fa-bars" (click)="sidenav.toggle()"></i></a>
+        <a href="#home" class="active" >
+          <i class="fa fa-bars" (click)="sidenav.toggle()"></i>
+                  </a>
+
       </div>
+
       <app-toolbar></app-toolbar>
+
       <app-main></app-main>
 
     </mat-sidenav-content>
     <!-- Main Content -->
+
+    <!-- Right Sidenav-->
+    <!--
+    <mat-sidenav #sidenav2 opened="true" [mode]="side" class="sidenav2" position="end">
+      <div class="topnav2">
+        <div class="top2"><i class="fa fa-bars" (click)="sidenav2.toggle()"></i></div>
+        <p> hi</p>
+      </div>
+    </mat-sidenav>
+      --->
+    <!--Right Sidenav-->
 
   </mat-sidenav-container>
 </div>
