--- a/app/app/ClientApp/src/app/main/main.component.css
+++ b/app/app/ClientApp/src/app/main/main.component.css
@@ -65,3 +65,83 @@ h2 {
   display: block;
 }
 
+
+
+
+
+
+
+
+
+.example-container {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+mat-sidenav {
+  width: 475px;
+}
+
+
+/* Style the navigation menu */
+.topnav2 {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+.topnav2-component {
+  background-color: rgb(255, 255, 255);
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.topnav2 #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.topnav2 a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+  /* Style the hamburger menu */
+  .topnav2 a.icon {
+    background: "#564946";
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+
+/* Add a grey background color on mouse-over */
+.topnav2 i:hover {
+  color: rgb(165, 160, 160);
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #564946;
+  color: white;
+}
+
+.top2 {
+  background-color: #564946;
+}
+
+
+
+.topnav2 div {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
