--- a/app/app/ClientApp/src/app/greeting/greeting.component.html
+++ b/app/app/ClientApp/src/app/greeting/greeting.component.html
@@ -6,7 +6,7 @@
       Click the icon on the left to open the search bar.
       Once you find the stock you are looking for click on it and watch the new stock block appear!
     </p>
-    <p>Each block pulls its respective stocks data for </p>
+    <p>Each block pulls its respective data for </p>
     <ul>
       <li>Intraday Data</li>
       <li>Historical Data</li>
