--- a/app/app/ClientApp/src/app/layout/layout.component.css
+++ b/app/app/ClientApp/src/app/layout/layout.component.css
@@ -7,9 +7,8 @@
 }
 
 mat-sidenav {
-  width: 475px;
+  width: 35%;
 }
-
 
 /* Style the navigation menu */
 .topnav {
@@ -18,46 +17,11 @@ mat-sidenav {
   position: relative;
 }
 
-.topnav-component {
-  background-color: rgb(255, 255, 255);
-}
-
-/* Hide the links inside the navigation menu (except for logo/home) */
-.topnav #myLinks {
-  display: none;
-}
-
-/* Style navigation menu links */
-.topnav a {
-  color: white;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
-}
-
-/* Style the hamburger menu */
-.topnav a.icon {
-  background: "#564946";
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-
-
-
 /* Add a grey background color on mouse-over */
 .topnav i:hover {
   color: rgb(165, 160, 160);
 }
 
-/* Style the active link (or home/logo) */
-.active {
-  background-color: #564946;
-  color: white;
-}
 
 .top {
   background-color: #564946;
@@ -76,8 +40,6 @@ mat-sidenav {
   display: block;
 }
 
-
-
 .store {
   background-color: #6FBAAA;
   min-height: 100%;
@@ -85,19 +47,11 @@ mat-sidenav {
   grid-template-rows: auto 1fr auto;
 }
 
-h1{
-  background-color: white;
-  color: white;
-}
-
-
 div .topIcons {
- 
   top: 50%;
 }
 
 #about {
   float: right;
   margin-left: -50%;
-
 }
