--- a/app/app/ClientApp/src/app/toolbar/toolbar.component.html
+++ b/app/app/ClientApp/src/app/toolbar/toolbar.component.html
@@ -9,11 +9,11 @@
       <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-animated">
         <li (click)="setInterval($event)" role="menuitem"><a class="dropdown-item" href="#">1 Week</a></li>
         <li (click)="setInterval($event)" role="menuitem"><a class="dropdown-item" href="#">1 Month</a></li>
-        <li (click)="setInterval($event)" role="menuitem"><a class="dropdown-item" href="#">3 Months</a></li>
         <li (click)="setInterval($event)" role="menuitem"><a class="dropdown-item" href="#">6 Months</a></li>
         <li (click)="setInterval($event)" role="menuitem"><a class="dropdown-item" href="#">1 Year</a></li>
         <li (click)="setInterval($event)" role="menuitem"><a class="dropdown-item" href="#">5 Years</a></li>
-        <li (click)="setInterval($event)" role="menuitem"><a class="dropdown-item" href="#">10 Years</a></li>
+        <li (click)="setInterval($event)" role="menuitem"><a class="dropdown-item" href="#">Max</a></li>
+
       </ul>
     </div>
 
