--- a/app/app/ClientApp/src/app/greeting/greeting.component.html
+++ b/app/app/ClientApp/src/app/greeting/greeting.component.html
@@ -1,19 +1,27 @@
+  <div class="wrap">
+    <h1 mat-dialog-title></h1>
+    <div mat-dialog-content>
 
-  <div mat-dialog-content>
-    <h1 mat-dialog-title>Welcome to Stockblocks!</h1>
-    <h5>Your own personalized equity research dashboard.</h5>
-    <p>
-      Click the icon on the left to open the search bar.
-      Once you find the stock you are looking for click on it and watch the new stock block appear!
-    </p>
-    <p>Each block pulls its respective data for </p>
-    <ul>
-      <li>Intraday Data</li>
-      <li>Historical Data</li>
-      <li>Daily Summary</li>
-      <li>Related News</li>
-    </ul>
+      <h1 id="greetingContent" mat-dialog-title>Welcome to Stockblocks!</h1>
+      <h5 id="greetingContent">Your own personalized equity research dashboard.</h5>
+      <p id="greetingContent">
+        Click the icon on the left to open the search bar.
+        Once you find the stock you are looking for click on it and watch the new stock block appear!
+      </p>
+      <p>Each block pulls its respective data for </p>
+      <ul>
+        <li>Intraday Data</li>
+        <li>Historical Data</li>
+        <li>Daily Summary</li>
+        <li>Related News</li>
+      </ul>
+
+    </div>
+
+    <div class="spacer"></div>
+
+    <div mat-dialog-actions style="align-items:center;">
+      <button mat-button color="primary" (click)="onNoClick()">Close</button>
+    </div>
+
   </div>
-<div mat-dialog-actions>
-  <button mat-button color="primary" (click)="onNoClick()">Close</button>
-</div>
