--- a/app/app/ClientApp/src/app/toolbar/toolbar.component.html
+++ b/app/app/ClientApp/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>  
   <mat-toolbar-row>
-    <mat-label> Historical Data Filters:  </mat-label>
-    <div class="btn-group" dropdown>
+    <mat-label> Historical Data Filter:  </mat-label>
+    <div style="padding-left:1%" class="btn-group" dropdown>
       <button id="button-animated" dropdownToggle type="button" class="btn btn-primary dropdown-toggle"
               aria-controls="dropdown-animated">
         {{ this.interval.length > 0  ? this.interval : 'Set Interval' }} <span class="caret"></span>
