made a bunch more changes

--- a/app/app/ClientApp/src/app/greeting/greeting.component.html
+++ b/app/app/ClientApp/src/app/greeting/greeting.component.html
@@ -4,17 +4,24 @@
 
       <h1 id="greetingContent" mat-dialog-title>Welcome to Stockblocks!</h1>
       <h5 id="greetingContent">Your own personalized equity research dashboard.</h5>
+      <br />
       <p id="greetingContent">
-        Click the icon on the left to open the search bar.
-        Once you find the stock you are looking for click on it and watch the new stock block appear!
+        Click the icon on the top left corner to open the search bar.
       </p>
-      <p>Each block pulls its respective data for </p>
-      <ul>
-        <li>Intraday Data</li>
-        <li>Historical Data</li>
-        <li>Daily Summary</li>
-        <li>Related News</li>
-      </ul>
+      <p id="greetingContent">
+        Once you find the stock you are looking for, simply click on it and watch the new stoc bloc appear!
+      </p>
+      <p id="greetingContent">Each block pulls its respective data for </p>
+
+      <p id="greetingContent">
+        1. Live Updating Intraday Data<br/>
+        2. Filterable Historical Data<br />
+        3. Related News<br />
+        4. Daily Summary<br />
+      </p>
+
+
+
 
     </div>
 
