--- a/app/app/ClientApp/src/app/greeting/greeting.component.html
+++ b/app/app/ClientApp/src/app/greeting/greeting.component.html
@@ -2,7 +2,8 @@
     <h1 mat-dialog-title></h1>
     <div mat-dialog-content>
 
-      <h1 id="greetingContent" mat-dialog-title>Welcome to Stockblocks!</h1>
+      <!--<h1 id="greetingContent" mat-dialog-title>Welcome to Stockblocks!</h1>-->
+      <h1 id="greetingContent">Welcome to Stockblocks!</h1>
       <h5 id="greetingContent">Your own personalized equity research dashboard.</h5>
       <br />
       <p id="greetingContent">
@@ -14,7 +15,7 @@
       <p id="greetingContent">Each block pulls its respective data for </p>
 
       <p id="greetingContent">
-        1. Live Updating Intraday Data<br/>
+        1. Live Updating Intraday Data<br />
         2. Filterable Historical Data<br />
         3. Related News<br />
         4. Daily Summary<br />
