--- a/app/app/ClientApp/src/app/block/block.component.css
+++ b/app/app/ClientApp/src/app/block/block.component.css
@@ -1,6 +1,4 @@
 .example-box {
-  width: 530px;
-  height: 400px;
   border: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   cursor: move;
@@ -13,6 +11,9 @@
   position: relative;
   background-color: white;
   z-index: 1;
+  overflow-y: scroll;
+
+
   transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
   box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2),
               0 2px 2px 0 rgba(0, 0, 0, 0.14),
@@ -23,4 +24,16 @@
   box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
               0 8px 10px 1px rgba(0, 0, 0, 0.14),
               0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+
+
+.large {
+  width: 65%;
+  height: 10%;
+}
+
+.small {
+  width: 33%;
+  height: 27%;
 }
