--- a/app/app/ClientApp/src/app/greeting/greeting.component.html
+++ b/app/app/ClientApp/src/app/greeting/greeting.component.html
@@ -2,9 +2,13 @@
     <h1 mat-dialog-title></h1>
     <div mat-dialog-content>
 
-      <!--<h1 id="greetingContent" mat-dialog-title>Welcome to Stockblocks!</h1>-->
-      <h1 id="greetingContent">Welcome to Stockblocks!</h1>
-      <h5 id="greetingContent">Your own personalized equity research dashboard.</h5>
+
+   
+      <img src="../assets/logo-6.png" />
+      <!--<h1 id="greetingContent" mat-dialog-title>Welcome to Stockblocks!</h1>
+  <h1 id="greetingContent">Welcome to Stockblocks!</h1>-->
+
+      <h2 id="greetingContent">Your own personalized equity research dashboard.</h2>
       <br />
       <p id="greetingContent">
         Click the icon on the top left corner to open the search bar.
